syntax = "proto3";

option csharp_namespace = "Deopartments.Application";

service DepartmentItem
{
	//create
	//rpc createDepartment(createDepartmentRequest) returns (createDepartmentResponse) {
	
	//}
	//getAll
	rpc ListDepartment(GetAllDepartmentRequest) returns (GetAllDepartmentResponse){
	
	}
	//Get One
	rpc ReadToDo(ReadDepartmentRequest) returns (ReadDepartmentResponse){
		
	}
	//Delete
	//rpc DeleteDepartment (DeleteDepartmentRequest) returns (DeleteDepartmentResponse){
		
		
	//}
	//Update
	////rpc UpdateDepartment (UpdateDepartmentRequest) returns (UpdateDepartmentResponse){
	
	//}
}

message createDepartmentRequest
{
	string Name =1;
}
message createDepartmentResponse
{
	int32 id = 1;
}

message ReadDepartmentRequest
{
	int32 id = 1;
}
message ReadDepartmentResponse
{
	int32 id = 1;
	string Name =2;
}
message GetAllDepartmentRequest{}
message GetAllDepartmentResponse{
	repeated ReadDepartmentResponse Departments = 1;
}

message UpdateDepartmentRequest{
	int32 id = 1;
	string Name =2;
}

message UpdateDepartmentResponse{
	int32 id =1;
}
message DeleteDepartmentRequest{
	int32 id=1;
}
message DeleteDepartmentResponse{
	int32 id =1;
}

